#76 - Split FolderPanel into two instances (my and preview), and first PreviewJoinAction.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -115,7 +115,7 @@ console.updatecheck.new_developmentversion=------------ New development version 
 
 createshortcut.description=Creates a shortcut to this folder on your desktop
 createshortcut.key=D
-createshortcut.name=Create desktop shortcut
+createshortcut.name=Create Desktop Shortcut
 
 delete_confimation.busy.description=Removing file(s)
 delete_confimation.busy.title=Deleting file(s)
@@ -645,6 +645,10 @@ openwebservice.key=B
 openwebservice.name=Open in Browser
 
 percent.place.holder={0}%
+
+previewjoin.description=Converts a previewed folder to a joined folder
+previewjoin.key=J
+previewjoin.name=Join Folder
 
 plugin_disable.description=Disable (and stop) Plugin
 plugin_disable.key=D
