Add create_desktop_shortcut (normal capitals for label)

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -296,6 +296,7 @@ foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
 foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the folder
 foldercreate.dialog.backuperror.title=Unable to backup folder
 foldercreate.dialog.saveinvitation=Save an invitation in the folder
+foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
 foldercreate.dialog.sendinvitation=Send invitations afterwards
 foldercreate.dialog.settings=Enter the settings for the new shared folder
 foldercreate.dialog.title=Create new folder
