#786 - Create and manage desktop.ini files

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -288,6 +288,7 @@ folder.check_path_length.title=Path maybe to long
 folder.check_subdirectory_and_filename_length.text=The filename or a (sub)directory name is longer than 30 characters.\nThis is not recommended since this may not work on other operating systems like Mac OS classic.\n\nFolder\: {0}\nFile\: {1}
 folder.check_subdirectory_and_filename_length.title=Filename or directory name maybe to long
 folder.members.synchronisation_panel.folder_size=Folder Size
+folder.info_tip=Contains files and folders managed by PowerFolder
 folder.members.synchronisation_panel.local_size=Local Size
 folder.members.synchronisation_panel.title=Member Sync Status
 
@@ -668,8 +669,8 @@ preferences.dialog.advPort=Port
 preferences.dialog.advPort.tooltip=Enter a ","-separated list of ports PowerFolder should listen for connections
 preferences.dialog.advanced.title=Advanced
 preferences.dialog.autostartleechfiles=Autostart external P2P
-preferences.dialog.basedir=Basedir for folders
-preferences.dialog.basedir.title=Choose default base folder
+preferences.dialog.basedir=Base directory for folders
+preferences.dialog.basedir.title=Choose default base directory
 preferences.dialog.bind=Interface address
 preferences.dialog.bind.any=Any
 preferences.dialog.bind.tooltip=Select the address PowerFolder should use
@@ -723,7 +724,7 @@ preferences.dialog.networkmode.name=Connect to
 preferences.dialog.networkmode.private=LAN and Internet
 preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.nickname=Nickname
-preferences.dialog.nonwindowsinfo=Attention\: Some settings are only available on Windows systems
+preferences.dialog.nonwindowsinfo=Note\: Some settings are only available on Windows systems
 preferences.dialog.openport=Automatically open Windows Firewall
 preferences.dialog.openport.tooltip=Opens the PowerFolder port on the Windows Firewall
 preferences.dialog.plugin.classname=Java classname
@@ -758,6 +759,7 @@ preferences.dialog.titleProcessing=processing...
 preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Use ZIP compression on LAN
 preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
+preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warning
 preferences.dialog.xbehavior=Exit behavior
