--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -220,6 +220,8 @@ enablesilentmode.description=Disables all heavy tasks, e.g. scanning for changes
 enablesilentmode.key=s
 enablesilentmode.name=Run Silently
 
+estimation.indefinite=indefinite
+
 filecopier.progressdialog.text=Copy files...
 filecopier.progressdialog.title=Copy files progress
 
