--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -260,12 +260,12 @@ filelist.status.no_files_available_add_files_and_invite=No files available... ad
 filelist.status.no_files_available_add_files_in_folder=No files available... add files in you local folder to share them
 filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching file list
 
-filenameproblem.dialog.add_to_ignore=Add to ignore
-filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
+filenameproblem.dialog.exclude_from_sync=Exclude from sync
+filenameproblem.dialog.exclude_from_sync.explained=Add this file to the list of files that are excluded from sharing
 filenameproblem.dialog.automatic_rename=Automatic rename
 filenameproblem.dialog.automatic_rename.explained=removes invalid characters and or adds "-1", or similair fixes to create a valid (unique) filename
 filenameproblem.dialog.description=Filename problem(s) detected, select a solution for each file
-filenameproblem.dialog.do_nothing=Do nothing
+filenameproblem.dialog.sync_anyways=Try to sync anyways
 filenameproblem.dialog.solution=Solution
 filenameproblem.dialog.title=Filename problem(s) detected
 filenameproblem.duplicate=Duplicate filename found (with different case)
