--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -107,7 +107,7 @@ clearrecentdownloads.name=Cleanup
 
 connect.description=Manually connects to a PowerFolder user
 connect.dialog.text=Please enter the hostname or ip of the user you want to connect.\n\nPowerFolder automatically connects to the network after a short time,\nuse this option if you want to manually connect to a user.\n
-connect.dialog.title=Manually connect to a powerfolder user
+connect.dialog.title=Manually connect to a PowerFolder user
 connect.key=c
 connect.name=Connect
 
