Incomplete - # 636: Disable Delta sync in LAN http://dev.powerfolder.com/projects/powerfolder/ticket/636
Added configuration options

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1131,3 +1131,6 @@ wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=Open Online documentation
 wizard.whattodo.projectwork=Setup a synced project
 wizard.whattodo.title=What do you want to do?
+
+preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
+preferences.dialog.usedeltaonlan=Use delta sync on LAN
