#809 - change Leave Folder to Remove Folder for previews

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -775,6 +775,13 @@ previewfiles.description=Preview files in this folder
 previewfiles.key=P
 previewfiles.name=Preview
 
+preview_folder_remove.description=Remove this PowerFolder preview
+preview_folder_remove.dialog.delete=Delete meta-data
+preview_folder_remove.dialog.text=Remove PowerFolder {0}?
+preview_folder_remove.dialog.title=Remove PowerFolder {0}?
+preview_folder_remove.key=R
+preview_folder_remove.name=Remove Folder
+
 previewjoin.description=Converts a previewed folder to a joined folder
 previewjoin.key=J
 previewjoin.name=Join Folder
@@ -829,8 +836,7 @@ quickinfo.myfolders.insyncall=All folders are synchronized
 quickinfo.myfolders.syncing=Synchronizing {0}
 quickinfo.myfolders.title=Status of my PowerFolders
 quickinfo.previewfolders.folders={0} in {1} folder(s)
-quickinfo.previewfolders.insyncall=All folders are synchronized
-quickinfo.previewfolders.syncing=Synchronizing {0}
+quickinfo.previewfolders.nosync=Preview folders are not synchronized
 quickinfo.previewfolders.title=Status of Preview Folders
 quickinfo.recylcebin.files={0} file(s) in Recycle Bin
 quickinfo.recylcebin.title=Recycle Bin
