#809 - Add RemoveAll(preview)FoldersAction

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -873,6 +873,10 @@ remove_from_recycle_bin.description=Delete file from the PowerFolder Recycle Bin
 remove_from_recycle_bin.key=D
 remove_from_recycle_bin.name=Delete File
 
+remove_all_preview_folders.description=Removes all preview PowerFolders
+remove_all_preview_folders.key=A
+remove_all_preview_folders.name=Remove All Folders
+
 remove_from_recycle_bin_confimation.text=Are you sure you want to delete the following file(s)?
 remove_from_recycle_bin_confimation.title=Delete files?
 
@@ -880,6 +884,10 @@ remove_pattern.dont=Do Not Remove
 remove_pattern.prompt=Pattern '{0}' will be removed.
 remove_pattern.remove=Remove
 remove_pattern.title=Remove ignore pattern
+
+remove_previews_action.title=Remove all preview folders
+remove_previews_action.text=Do you want to remove all preview folders?
+remove_previews_action.remove=Remove
 
 removefriend.description=Removes user from friend list
 removefriend.key=r
