Incomplete - # 591: UDP Tunnel/Firewall/NAT piercing protocol implementation http://dev.powerfolder.com/projects/powerfolder/ticket/591
Small fixes and GUI config for NAT traversal

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1151,3 +1151,5 @@ wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=Open Online documentation
 wizard.whattodo.projectwork=Setup a synced project
 wizard.whattodo.title=What do you want to do?
+
+preferences.dialog.use.udt.connections=Use NAT traversal to improve connectivity
