--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -79,6 +79,7 @@ addressEditor.title=IP-Range
 apps.dir.firefox=Firefox
 apps.dir.outlook=Outlook
 apps.dir.thunderbird=Thunderbird
+apps.dir.sunbird=Sunbird
 
 buypro.description=Upgrade to PowerFolder Pro now
 buypro.key=B
@@ -168,7 +169,7 @@ dialog.directorychooser.new.name=New
 dialog.directorychooser.new.problem=There was a problem creating\n{0}
 dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
 dialog.directorychooser.title=Select directory
-dialog.fatalerror.title=Fatal Error
+dialog.fatalerror.title=Fatal Error                               wiz
 dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.newdirectorycreator.title=New directory
 dialog.synchronization.choose=Please choose your sync action
@@ -455,7 +456,7 @@ general.description=Description
 general.directory=Directory
 general.disconnected=Disconnected
 general.downloads=Downloads
-general.estimatedsize=Estimated size
+general.estimated_size=Estimated size
 general.file=File
 general.files=Files
 general.folder=Folder
@@ -469,11 +470,13 @@ general.help=help
 general.hide=hide
 general.hours=Hour(s)
 general.inet=Internet
+general.invitor=Invitor
 general.localcopyat=Local copy at
 general.localcopyplace=Choose a place for local copy
 general.localized_date_format=MMMM dd yyyy
 general.localnet=LAN
 general.member=Member
+general.message=Message
 general.minutes=Minute(s)
 general.monday=Monday
 general.neverAskAgain=Never ask this again
@@ -485,6 +488,7 @@ general.ok.key=O
 general.overwrite=Overwrite
 general.overwrite_all=Overwrite all
 general.powerfolder=PowerFolder
+general.preview_folder=Preview folder
 general.recyclebin=Recycle Bin
 general.reject=Reject
 general.saturday=Saturday
@@ -502,7 +506,7 @@ general.uploads=Uploads
 general.user=User
 general.webservice=Online Storage
 general.wednesday=Wednesday
-general.whatisthis=What is this?
+general.what_is_this=What is this?
 general.yesterday=yesterday
 
 hideoffline.description=The offline users will be filtered from this search result
@@ -1093,8 +1097,12 @@ wizard.control.help=Help
 wizard.control.help.description=Show online help (Alt-8)
 wizard.control.next=Next >
 wizard.control.next.description=Go to next wizard step
+wizard.create_folder.title=Create Folder
+wizard.create_folder.sendinvitation=Send invitations afterwards
 wizard.description=Opens wizard
 wizard.filesharing.sharedsuccess=You successfully shared a new folder\!\nOther users may join now
+wizard.folder_invitation.title=Folder Invitation
+wizard.folder_invitation.intro=You have received an invitation from {0}
 wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
 wizard.host_panel.pcsjoin=Other computers can join this folder now
 wizard.host_panel.select=Please select the directory which should be the host
@@ -1129,7 +1137,7 @@ wizard.setupdns.enterdns=Enter your (dynamic) dns
 wizard.setupdns.improvesread=It improves your reachability. However this is not required
 wizard.setupdns.nodnssetup=You have not setup a (dynamic) dns address yet\!
 wizard.setupdns.title=Setup (dynamic) dns
-wizard.setupdns.validate=Validate 
+wizard.setupdns.validate=Validate
 wizard.setupsuccess=Setup successfully
 wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
