815 - Chnge button to Leave, and add preview cb.

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -161,7 +161,7 @@ sync_100.icon=icons/sync/Sync_0100.png
 sync_unknown.icon=icons/sync/Sync_unknown.png
 
 # crappy button icons that don't make sense removed (for now)
-folderleave.icon=
+folder_leave.icon=
 requestnetfolderlist.icon=
 previewfiles.icon=
 folderjoin.icon=
