--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -342,13 +342,16 @@ folderjoin.secret=Secret
 folderjoin.warning.notempty.text=The directory for the local copy of folder '{0}' is not empty.\nAll files contained there will be uploaded to its members.\nAre you sure you want to place the local copy of this folder at\n'{1}'?
 folderjoin.warning.notempty.title=Local base directory not empty
 
-folderleave.description=Leave this PowerFolder
-folderleave.dialog.delete=Delete meta-data
-folderleave.dialog.sync_warning=The PowerFolder is currently synchronizing\!
-folderleave.dialog.text=Leave PowerFolder {0}?
-folderleave.dialog.title=Leave PowerFolder {0}?
-folderleave.key=L
-folderleave.name=Leave Folder
+folder_leave.description=Leave this PowerFolder
+folder_leave.dialog.delete=Delete meta-data
+folder_leave.dialog.sync_warning=The PowerFolder is currently synchronizing\!
+folder_leave.dialog.text=Leave PowerFolder {0}?
+folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.dialog.preview=Convert to preview
+folder_leave.key=L
+folder_leave.name=Leave Folder
+folder_leave.button.name=Leave
+folder_leave.button.key=L
 
 foldermove.progress.text=Moving folder '{0}'
 foldermove.progress.title=Folder Move
