814 - auto display node select dialog (if no node already selected)

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -941,13 +941,13 @@ sendinvitation.ask_emailaddres.title=Email address
 sendinvitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
 sendinvitation.description=Invites a user to a folder
 sendinvitation.email=To email...
-sendinvitation.example_emailaddress=email@domain.com
+send_invitation.example_email_address=email@domain.com
 sendinvitation.folder.text=Send invitation to
 sendinvitation.folder.title=Send Invitation
 sendinvitation.key=i
-sendinvitation.multi_users=Multiple users selected
+send_invitation.multi_users=Multiple users selected
 sendinvitation.name=Send Invitation
-sendinvitation.no_users=No users selected
+send_invitation.no_users=No users selected
 sendinvitation.placetostore=Choose a place to store invitation
 sendinvitation.subject=Invitation to the PowerFolder '{0}'
 sendinvitation.toclipboard=To clipboard...
@@ -1123,18 +1123,18 @@ wizard.project_panel.select=Please select the project directory
 wizard.projectname.choose=Choose project name
 wizard.projectname.entername=Enter the name of your project
 wizard.projectname.title=Load invitation
-wizard.sendinvitations.invitationtext=Enter a message for the receiver
-wizard.sendinvitations.invitationtextsample=
-wizard.sendinvitations.join=Invitation files are required to join a folder.
-wizard.sendinvitations.neveruntrusted=Never give out invitation files to untrusted people.
+wizard.send_invitations.invitation_text=Enter a message for the receiver
+wizard.send_invitations.invitation_text_sample=
+wizard.send_invitations.join=Invitation files are required to join a folder.
+wizard.send_invitations.never_untrusted=Never give out invitation files to untrusted people.
 wizard.sendinvitations.offline=Not connected
-wizard.sendinvitations.overpf=Via PowerFolder now
-wizard.sendinvitations.savetofile=Save as file
-wizard.sendinvitations.sendbymail=Send by mail
-wizard.sendinvitations.sendinvitation=Send invitation
+wizard.send_invitations.over_powerfolder=Send via PowerFolder now
+wizard.send_invitations.save_to_file=Save as file
+wizard.send_invitations.send_by_mail=Send by mail
+wizard.send_invitations.send_invitation=Send invitation
 wizard.sendinvitations.sendsuccess=Invitation sent
 wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
-wizard.sendinvitations.title=Save invitation
+wizard.send_invitations.title=Save invitation
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Enter your (dynamic) dns
 wizard.setupdns.improvesread=It improves your reachability. However this is not required
