796 - Use FolderSettings instead of parameters.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -315,7 +315,7 @@ foldercreate.key=N
 foldercreate.name=New Folder
 foldercreate.nameempty.text=Name of the PowerFolder should not be empty
 foldercreate.nameempty.title=Name required
-foldercreate.progress.text=Creating PowerFolder '{0}'
+folder_create.progress.text=Creating PowerFolder '{0}'
 foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
 folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
@@ -474,7 +474,7 @@ general.hide=hide
 general.hours=Hour(s)
 general.inet=Internet
 general.invitor=Invitor
-general.localcopyat=Local copy at
+general.local_copy_at=Local copy at
 general.localcopyplace=Choose a place for local copy
 general.localized_date_format=MMMM dd yyyy
 general.localnet=LAN
