--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -169,7 +169,7 @@ dialog.directorychooser.new.name=New
 dialog.directorychooser.new.problem=There was a problem creating\n{0}
 dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
 dialog.directorychooser.title=Select directory
-dialog.fatalerror.title=Fatal Error                               wiz
+dialog.fatalerror.title=Fatal Error
 dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.newdirectorycreator.title=New directory
 dialog.synchronization.choose=Please choose your sync action
