--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -45,6 +45,7 @@ showhidefiledetails.icon=icons/Properties.gif
 
 # Toolbar icons
 wizard.icon=icons/toolbar/NewFolder-48.png
+search_user.icon=icons/toolbar/SearchUser-48.png
 buypro.icon=icons/toolbar/BuyPro-48.png
 new_folder.icon=icons/toolbar/NewFolder-48.png
 join_folder.icon=icons/toolbar/JoinFolder-48.png
