--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,8 @@
 # http://www.powerfolder.com
 #
 
+quickinfo.folder.preview=Preview - No synchronization
+
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -1100,8 +1102,11 @@ wizard.control.help=Help
 wizard.control.help.description=Show online help (Alt-8)
 wizard.control.next=Next >
 wizard.control.next.description=Go to next wizard step
-wizard.create_folder.title=Create Folder
-wizard.create_folder.sendinvitation=Send invitations afterwards
+wizard.create_folder.title=Creating PowerFolder
+wizard.create_folder.working=Creating PowerFolder, please wait.
+wizard.create_folder.failed=Failed to create PowerFolder.
+wizard.setup_folder.title=Create Folder
+wizard.setup_folder.sendinvitation=Send invitations afterwards
 wizard.description=Opens wizard
 wizard.filesharing.sharedsuccess=You successfully shared a new folder\!\nOther users may join now
 wizard.folder_invitation.title=Folder Invitation
@@ -1120,6 +1125,7 @@ wizard.name=Wizard
 wizard.pfwizard.title=Wizard
 wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_panel.select=Please select the project directory
+wizard.choose_location.select=Please select the directory
 wizard.projectname.choose=Choose project name
 wizard.projectname.entername=Enter the name of your project
 wizard.projectname.title=Load invitation
