Now shows LAN ONLY

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -643,6 +643,7 @@ onlinelabel.offline=Offline
 onlinelabel.offline.text=You are offline. Not connected to any user on the PowerFolder network
 onlinelabel.online=Online
 onlinelabel.online.text=You are online
+general.lan_only=LAN only
 
 open_local_folder.description=Opens folder in your operating systems file explorer
 open_local_folder.key=F
