Corrected new HP urls and minor cleanups

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,8 +19,6 @@
 # http://www.powerfolder.com
 #
 
-quickinfo.folder.preview=Preview - No synchronization
-
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -33,6 +31,7 @@ aborttransfer.description=Aborts the selected transfer
 aborttransfer.key=a
 aborttransfer.name=Abort Transfer(s)
 
+general.more=More
 about.description=Shows information about PowerFolder
 about.dialog.check_for_updates=Check For Updates
 about.dialog.check_for_updates.key=U
@@ -80,8 +79,8 @@ addressEditor.title=IP-Range
 
 apps.dir.firefox=Firefox
 apps.dir.outlook=Outlook
-apps.dir.thunderbird=Thunderbird
 apps.dir.sunbird=Sunbird
+apps.dir.thunderbird=Thunderbird
 
 buypro.description=Upgrade to PowerFolder Pro now
 buypro.key=B
@@ -104,10 +103,6 @@ chatpanel.member_left_folder_at_time={0} left folder at {1}
 clearcompleteddownloads.description=Clears the list of the recently completed downloads (Alt-3)
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=Cleanup
-
-clearrecentdownloads.description=Clears the list of the recent problems
-clearrecentdownloads.key=c
-clearrecentdownloads.name=Cleanup
 
 connect.description=Manually connects to a PowerFolder user
 connect.dialog.text=Please enter the hostname or ip of the user you want to connect.\n\nPowerFolder automatically connects to the network after a short time,\nuse this option if you want to manually connect to a user.\n
@@ -298,6 +293,19 @@ folder.members.synchronisation_panel.folder_size=Folder Size
 folder.members.synchronisation_panel.local_size=Local Size
 folder.members.synchronisation_panel.title=Member Sync Status
 
+folder_create.progress.text=Creating PowerFolder '{0}'
+
+folder_leave.button.key=L
+folder_leave.button.name=Leave
+folder_leave.description=Leave this PowerFolder
+folder_leave.dialog.delete=Delete meta-data
+folder_leave.dialog.preview=Convert to preview
+folder_leave.dialog.sync_warning=The PowerFolder is currently synchronizing\!
+folder_leave.dialog.text=Leave PowerFolder {0}?
+folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=L
+folder_leave.name=Leave Folder
+
 foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
 foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
@@ -317,7 +325,6 @@ foldercreate.key=N
 foldercreate.name=New Folder
 foldercreate.nameempty.text=Name of the PowerFolder should not be empty
 foldercreate.nameempty.title=Name required
-folder_create.progress.text=Creating PowerFolder '{0}'
 foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
 folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
@@ -343,17 +350,6 @@ folderjoin.preview_only=
 folderjoin.secret=Secret
 folderjoin.warning.notempty.text=The directory for the local copy of folder '{0}' is not empty.\nAll files contained there will be uploaded to its members.\nAre you sure you want to place the local copy of this folder at\n'{1}'?
 folderjoin.warning.notempty.title=Local base directory not empty
-
-folder_leave.description=Leave this PowerFolder
-folder_leave.dialog.delete=Delete meta-data
-folder_leave.dialog.sync_warning=The PowerFolder is currently synchronizing\!
-folder_leave.dialog.text=Leave PowerFolder {0}?
-folder_leave.dialog.title=Leave PowerFolder {0}?
-folder_leave.dialog.preview=Convert to preview
-folder_leave.key=L
-folder_leave.name=Leave Folder
-folder_leave.button.name=Leave
-folder_leave.button.key=L
 
 foldermove.progress.text=Moving folder '{0}'
 foldermove.progress.title=Folder Move
@@ -476,6 +472,7 @@ general.hide=hide
 general.hours=Hour(s)
 general.inet=Internet
 general.invitor=Invitor
+general.lan_only=LAN only
 general.local_copy_at=Local copy at
 general.localcopyplace=Choose a place for local copy
 general.localized_date_format=MMMM dd yyyy
@@ -643,7 +640,6 @@ onlinelabel.offline=Offline
 onlinelabel.offline.text=You are offline. Not connected to any user on the PowerFolder network
 onlinelabel.online=Online
 onlinelabel.online.text=You are online
-general.lan_only=LAN only
 
 open_local_folder.description=Opens folder in your operating systems file explorer
 open_local_folder.key=F
@@ -767,6 +763,7 @@ preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
 preferences.dialog.title=Preferences
 preferences.dialog.titleProcessing=processing...
 preferences.dialog.use.relayed.connections=Use relayed connections to improve connectivity
+preferences.dialog.use.udt.connections=Use NAT traversal to improve connectivity
 preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.usedeltaonlan=Use delta sync on LAN
 preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
@@ -781,16 +778,16 @@ preferences.dialog.xbehavior.minimize=Minimize to system tray
 preferences.key=p
 preferences.name=Preferences
 
-previewfiles.description=Preview files in this folder
-previewfiles.key=P
-previewfiles.name=Preview
-
 preview_folder_remove.description=Remove this PowerFolder preview
 preview_folder_remove.dialog.delete=Delete meta-data
 preview_folder_remove.dialog.text=Remove PowerFolder {0}?
 preview_folder_remove.dialog.title=Remove PowerFolder {0}?
 preview_folder_remove.key=R
 preview_folder_remove.name=Remove Folder
+
+previewfiles.description=Preview files in this folder
+previewfiles.key=P
+previewfiles.name=Preview
 
 previewjoin.description=Converts a previewed folder to a joined folder
 previewjoin.key=J
@@ -837,6 +834,7 @@ quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder is in sync
 quickinfo.folder.is_synchronizing=Folder is synchronizing...
 quickinfo.folder.number_of_files_and_size={0} File(s), {1}
+quickinfo.folder.preview=Preview - No synchronization
 quickinfo.folder.status_of_folder=Status of {0}
 quickinfo.friends.online={0} of {1} friend(s) are online
 quickinfo.friends.title=Find Users
@@ -879,13 +877,13 @@ recyclebin.confirmation.overwrite.on.restore.size.bytes=Size {0}
 recyclebin.confirmation.overwrite.on.restore.title=Restore file, overwrite?
 recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=With file from recycle bin?
 
-remove_from_recycle_bin.description=Delete file from the PowerFolder Recycle Bin
-remove_from_recycle_bin.key=D
-remove_from_recycle_bin.name=Delete File
-
 remove_all_preview_folders.description=Removes all preview PowerFolders
 remove_all_preview_folders.key=A
 remove_all_preview_folders.name=Remove All Folders
+
+remove_from_recycle_bin.description=Delete file from the PowerFolder Recycle Bin
+remove_from_recycle_bin.key=D
+remove_from_recycle_bin.name=Delete File
 
 remove_from_recycle_bin_confimation.text=Are you sure you want to delete the following file(s)?
 remove_from_recycle_bin_confimation.title=Delete files?
@@ -895,9 +893,9 @@ remove_pattern.prompt=Pattern '{0}' will be removed.
 remove_pattern.remove=Remove
 remove_pattern.title=Remove ignore pattern
 
-remove_previews_action.title=Remove all preview folders
-remove_previews_action.text=Do you want to remove all preview folders?
 remove_previews_action.remove=Remove
+remove_previews_action.text=Do you want to remove all preview folders?
+remove_previews_action.title=Remove all preview folders
 
 removefriend.description=Removes user from friend list
 removefriend.key=r
@@ -937,6 +935,10 @@ searchfriends.description=Search a friend
 searchfriends.key=S
 searchfriends.name=Search
 
+send_invitation.example_email_address=email@domain.com
+send_invitation.multi_users=Multiple users selected
+send_invitation.no_users=No users selected
+
 sendinvitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
 sendinvitation.allFolders.title={0} already on all folders
 sendinvitation.ask_emailaddres.message=Email address to send invitation to
@@ -944,13 +946,10 @@ sendinvitation.ask_emailaddres.title=Email address
 sendinvitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
 sendinvitation.description=Invites a user to a folder
 sendinvitation.email=To email...
-send_invitation.example_email_address=email@domain.com
 sendinvitation.folder.text=Send invitation to
 sendinvitation.folder.title=Send Invitation
 sendinvitation.key=i
-send_invitation.multi_users=Multiple users selected
 sendinvitation.name=Send Invitation
-send_invitation.no_users=No users selected
 sendinvitation.placetostore=Choose a place to store invitation
 sendinvitation.subject=Invitation to the PowerFolder '{0}'
 sendinvitation.toclipboard=To clipboard...
@@ -1091,6 +1090,7 @@ wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Basic Setup
 wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basicsetup.upload.title=Unlimited connection speed
+wizard.choose_location.select=Please select the directory
 wizard.choosedisklocation.select=Select directory
 wizard.choosedisklocation.title=Disk location
 wizard.control.back=< Back
@@ -1103,15 +1103,13 @@ wizard.control.help=Help
 wizard.control.help.description=Show online help (Alt-8)
 wizard.control.next=Next >
 wizard.control.next.description=Go to next wizard step
+wizard.create_folder.failed=Failed to create PowerFolder.
 wizard.create_folder.title=Creating PowerFolder
 wizard.create_folder.working=Creating PowerFolder, please wait.
-wizard.create_folder.failed=Failed to create PowerFolder.
-wizard.setup_folder.title=Create Folder
-wizard.setup_folder.sendinvitation=Send invitations afterwards
 wizard.description=Opens wizard
 wizard.filesharing.sharedsuccess=You successfully shared a new folder\!\nOther users may join now
-wizard.folder_invitation.title=Folder Invitation
 wizard.folder_invitation.intro=You have received an invitation from {0}
+wizard.folder_invitation.title=Folder Invitation
 wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
 wizard.host_panel.pcsjoin=Other computers can join this folder now
 wizard.host_panel.select=Please select the directory which should be the host
@@ -1126,7 +1124,6 @@ wizard.name=Wizard
 wizard.pfwizard.title=Wizard
 wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_panel.select=Please select the project directory
-wizard.choose_location.select=Please select the directory
 wizard.projectname.choose=Choose project name
 wizard.projectname.entername=Enter the name of your project
 wizard.projectname.title=Load invitation
@@ -1134,14 +1131,16 @@ wizard.send_invitations.invitation_text=Enter a message for the receiver
 wizard.send_invitations.invitation_text_sample=
 wizard.send_invitations.join=Invitation files are required to join a folder.
 wizard.send_invitations.never_untrusted=Never give out invitation files to untrusted people.
-wizard.sendinvitations.offline=Not connected
 wizard.send_invitations.over_powerfolder=Send via PowerFolder now
 wizard.send_invitations.save_to_file=Save as file
 wizard.send_invitations.send_by_mail=Send by mail
 wizard.send_invitations.send_invitation=Send invitation
+wizard.send_invitations.title=Save invitation
+wizard.sendinvitations.offline=Not connected
 wizard.sendinvitations.sendsuccess=Invitation sent
 wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
-wizard.send_invitations.title=Save invitation
+wizard.setup_folder.sendinvitation=Send invitations afterwards
+wizard.setup_folder.title=Create Folder
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Enter your (dynamic) dns
 wizard.setupdns.improvesread=It improves your reachability. However this is not required
@@ -1169,5 +1168,3 @@ wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=Open Online documentation
 wizard.whattodo.projectwork=Setup a synced project
 wizard.whattodo.title=What do you want to do?
-
-preferences.dialog.use.udt.connections=Use NAT traversal to improve connectivity
