--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -762,8 +762,8 @@ preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
 preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
 preferences.dialog.title=Preferences
 preferences.dialog.titleProcessing=processing...
-preferences.dialog.use.relayed.connections=Use relayed connections to improve connectivity
-preferences.dialog.use.udt.connections=Use NAT traversal to improve connectivity
+preferences.dialog.use.relayed.connections=Use relayed connections
+preferences.dialog.use.udt.connections=Use NAT traversal
 preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.usedeltaonlan=Use delta sync on LAN
 preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
