#847 New client/server RPC protocol

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -861,7 +861,7 @@ quickinfo.user.isconnectedlan=Is on LAN
 quickinfo.user.isdiconnected=Is disconnected
 quickinfo.user.secureconnected=securely connected
 quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
-quickinfo.webservice.foldersmirrored={0} of {1} folder(s) get backed up
+quickinfo.webservice.foldersmirrored={0} of {1} folders get backed up. {2} online space used.
 quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
 quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
 quickinfo.webservice.notsetup=Online Storage not configured yet
@@ -1061,6 +1061,10 @@ transfers.verifying=Finalizing
 unignorefile.description=File(s) will be downloaded/shared again
 unignorefile.key=R
 unignorefile.name=Remove from Ignore pattens
+
+sync_folder_rights.name=Preview all folders
+sync_folder_rights.key=S
+sync_folder_rights.description=Syncs the folder memberships with own account. Adds available PowerFolder to the preview. 
 
 user.dir.contacts=Contacts
 user.dir.custom=Custom
