--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -686,8 +686,6 @@ preferences.dialog.colortheme=Color theme
 preferences.dialog.createdesktopshortcuts=Create desktop shortcuts
 preferences.dialog.debugReports=Enable debug reports
 preferences.dialog.deleteemptydirs=Delete empty directories
-preferences.dialog.deltasync=Use delta sync
-preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
 preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
@@ -1172,3 +1170,10 @@ wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=Open Online documentation
 wizard.whattodo.projectwork=Setup a synced project
 wizard.whattodo.title=What do you want to do?
+
+preferences.dialog.deltasync=Use delta sync on the Internet
+preferences.dialog.deltasync.tooltip=Synchronise only changed file-parts
+preferences.dialog.swarming.internet=Use swarming downloads on the Internet
+preferences.dialog.swarming.internet.tooltip=Enable downloads from multiple sources coming from the Internet
+preferences.dialog.swarming.lan=Use swarming downloads in LAN
+preferences.dialog.swarming.lan.tooltip=Enable downloads from multiple sources in LAN 
