--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1175,5 +1175,5 @@ preferences.dialog.deltasync=Use delta sync on the Internet
 preferences.dialog.deltasync.tooltip=Synchronise only changed file-parts
 preferences.dialog.swarming.internet=Use swarming downloads on the Internet
 preferences.dialog.swarming.internet.tooltip=Enable downloads from multiple sources coming from the Internet
-preferences.dialog.swarming.lan=Use swarming downloads in LAN
+preferences.dialog.swarming.lan=Use swarming downloads on LAN
 preferences.dialog.swarming.lan.tooltip=Enable downloads from multiple sources in LAN 
