#830 - reorganize System section of About Dialog

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -47,16 +47,15 @@ about.dialog.team=Team
 about.dialog.testers=Testers
 about.dialog.title=About PowerFolder
 about.dialog.translators=Translators
-about.dialog.version.builddate=Build date\: {0}
-about.dialog.version.buildtime=Build time\: {0}
-about.dialog.version.text=Version\: {0}
-about.dialog.version.title=Version
+about.dialog.power_folder.builddate=Build date\: {0}
+about.dialog.power_folder.buildtime=Build time\: {0}
+about.dialog.power_folder.text=Version\: {0}
+about.dialog.power_folder.max=Max memory\: {0}MB
+about.dialog.power_folder.used=Used memory\: {0}MB
 about.dialog.yoursystem.java_version=Java version\: {0}
-about.dialog.yoursystem.max=Max memory\: {0}MB
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=Screen\: {0}x{1}
 about.dialog.yoursystem.title=Your System
-about.dialog.yoursystem.used=Used memory\: {0}MB
 about.dialog_about_tab=about
 about.dialog_contributers_tab=team
 about.key=h
