--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -57,6 +57,10 @@ wake_up.icon=icons/toolbar/WakeUp-48.png
 sync_now.icon=icons/toolbar/Sync-48.png
 sync_now_active.icon=icons/toolbar/SyncActive-48.png
 
+sort_up.icon=icons/SortUp.gif
+sort_down.icon=icons/SortDown.gif
+sort_blank.icon=icons/SortBlank.gif
+
 # Sync icons for FolderQuickInfoPanel
 sync_0.icon=icons/sync/Sync_0000.png
 sync_1.icon=icons/sync/Sync_0001.png
