--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1176,3 +1176,11 @@ preferences.dialog.swarming.internet=Use swarming downloads on the Internet
 preferences.dialog.swarming.internet.tooltip=Enable downloads from multiple sources coming from the Internet
 preferences.dialog.swarming.lan=Use swarming downloads on LAN
 preferences.dialog.swarming.lan.tooltip=Enable downloads from multiple sources in LAN 
+
+dialog.binderror.option.title=Port binding error!
+dialog.binderror.option.text=Unable to bind on specified port(s)!\nAn bound port is required for PowerFolder to\nreceive incoming connections. 
+dialog.binderror.option.randomport=Use random port
+dialog.binderror.option.ignore=Continue
+dialog.binderror.option.exit=Exit PowerFolder
+
+
