#859 - rename incoming to available

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -588,7 +588,7 @@ mp3fileinfo.title=Title
 myfolderstable._total_number_of_files=Total \# Files
 myfolderstable.local_size=Local Size
 myfolderstable.members=Members
-myfolderstable.number_of_available_files=\# Available
+myfolderstable.number_of_incoming_files=Incoming
 myfolderstable.number_of_deleted_files=\# Deleted
 myfolderstable.number_of_local_files=\# Local
 myfolderstable.number_of_members={0} members
@@ -1171,7 +1171,7 @@ wizard.whattodo.projectwork=Setup a synced project
 wizard.whattodo.title=What do you want to do?
 
 preferences.dialog.deltasync=Use delta sync on the Internet
-preferences.dialog.deltasync.tooltip=Synchronise only changed file-parts
+preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts
 preferences.dialog.swarming.internet=Use swarming downloads on the Internet
 preferences.dialog.swarming.internet.tooltip=Enable downloads from multiple sources coming from the Internet
 preferences.dialog.swarming.lan=Use swarming downloads on LAN
